# CMakeList.txt : CMake project for direct3d11-glfw-project, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (direct3d11-glfw-project "direct3d11-glfw-project.cpp" "direct3d11-glfw-project.h")

# TODO: Add tests and install targets if needed.
